# Copyright 2024 The StableHLO Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_python", version = "0.30.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# There is a problem at the moment running lit using Python 3.11
# Our CI system enforces Python 3.10 to get around it but we should set the toolchain
# in Bazel itself to avoid this problem.
# https://github.com/llvm/llvm-project/issues/75963
python.toolchain(
    is_default = True,
    python_version = "3.10",
)
